Refactor CRUD operations, implement ExpenseTracker tests, add LocalDateAdapter to use from Gson